test/asm/macro-args-outside-macro.asm
	println \1
	println \<2>
	println \#
